# learning-codes

./: .gitignore  LICENSE  README.md
c/: CMakeLists.txt  CMakeLists.txt.bak  README.md  arr.c  binary.c  calWords  calWords.c  checking.c  choice_get.c  data.c  defineFunc.c  enumFun.c  example.c  factor.c  getchar_base.c  guest.c  hotel.c  hotel.h  lesser.c  lesson8.c  lethead1.c  menutte.c  misues.c  otherLesson.c  question.md  question_09.c  run.sh  selfLib.c  show_char.c  showchar.c  t.h  test.cmake  usehotel.c
c#/: README.md
c-question-100/: README.md  fget  fget.c  question-01  question-01.c
c/func/: CMakeLists.txt  MathFunctions.h  math.c
c/question_07/: question_07_12_1.c  question_07_12_2.c  question_07_12_3.c  question_07_12_4.c  question_07_12_5.c  question_07_12_6.c
c/question_08/: file.txt  question_08_01.c
c/question_09/: question_01.c  question_02.c  question_03.c  question_04.c
c/temp/: t.h.in
go/: LICENSE  README.md  go.mod  go.sum
groovy/: Identifiers.groovy  LICENSE.md  annotations.groovy  app.groovy  arrays.groovy  booleans.groovy  characters.groovy  closures.groovy  custome-command.groovy  dataTypes.groovy  fileIo.groovy  hello.groovy  keywords.groovy  lists.groovy  maps.groovy  numbers.groovy  objects.groovy  operators.groovy  records.groovy  semantics.groovy  shebang.groovy  traits.groovy
java/: README.md
lua/: control.lua  func.lua  operator.lua  routine.lua  type.lua
rust/qiniu/: Cargo.toml
rust/qiniu/src/: main.rs
rust/server/: Cargo.toml
rust/server/src/: main.rs
shell/: condi_case.sh  condi_for.sh  condi_for2.sh  condi_if.sh  confi_util.sh  func.sh  (+6 more)
(+285 files in other folders)
